# dotlr

./: .editorconfig  .gitignore  .rustfmt.toml  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml
assets/data/: sample.json
assets/grammars/correct/: binary-addition.lr  calculator.lr  conditional.lr  g10.lr  g11.lr  g9.lr  indirect_empty.lr  json.lr  json.optimized.lr  not-lalr.lr  optional.lr
assets/grammars/incorrect/semantic/: reduce-reduce-conflict.lr  shift-reduce-conflict.lr  undefined-regex-token.lr  undefined-symbol.lr
assets/grammars/incorrect/syntactic/: invalid-regex.lr  unexpected-token.lr
benches/: main.rs  parsing_json.rs
bindings/typescript/: .prettierignore  README.md  build.js  eslint.config.js  package-lock.json  package.json  tsconfig.json
bindings/typescript/src/: index.ts  types.ts  utils.ts
examples/: calculator.rs  json.rs
src/: automaton.rs  errors.rs  grammar.rs  lib.rs  main.rs  parser.rs  span.rs  tables.rs  trace.rs  tree.rs  utils.rs
tests/: common.rs  grammar.rs  parser.rs  parsing.rs  span.rs
