[package]
name = "dotlr"
description = "An LR(1) parser generator and visualizer created for educational purposes."
categories = ["algorithms", "parsing"]
keywords = ["educational", "lr-parsing", "parser-generator"]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = [
    "Umut Şahin <umutsahin@protonmail.com>",
]

[dependencies]
clap = { version = "4.5", optional = true, features = ["derive"] }
colored = { version = "2.1" }
dirs = { version = "5.0", optional = true }
indexmap = { version = "2.3" }
itertools = { version = "0.13" }
logos = { version = "0.14" }
prettytable-rs = { version = "0.10" }
ptree = { version = "0.5" }
regex = { version = "1.10" }
rustyline = { version = "14.0", optional = true }
smallvec = { version = "1.13" }
smol_str = { version = "0.3" }
thiserror = { version = "1.0" }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[features]
default = ["repl"]
repl = ["clap", "dirs", "rustyline"]

[profile.release]
lto = "fat"
codegen-units = 1

[lints.clippy]
result_large_err = "allow"

[lib]
bench = false
doctest = false

[[bench]]
name = "main"
harness = false
