[package]
name = "dotlr"
description = "An LR(1) parser generator and visualizer created for educational purposes."
categories = ["algorithms", "parsing"]
keywords = ["educational", "lalr-parsing", "lr-parsing", "parser-generator"]
version = "0.2.1"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = [
    "Umut Şahin <umutsahin@protonmail.com>",
    "Specy <specy.dev@gmail.com>",
]

[dependencies]
clap = { version = "4.5", optional = true, features = ["derive"] }
console_error_panic_hook = { version = "0.1.1", optional = true }
dirs = { version = "5.0", optional = true }
indexmap = { version = "2.3" }
itertools = { version = "0.13" }
logos = { version = "0.14" }
prettytable-rs = { version = "0.10" }
ptree = { version = "0.5" }
regex = { version = "1.10" }
rustyline = { version = "14.0", optional = true }
serde_renamed = { package = "serde", version = "1.0", features = ["derive"], optional = true }
serde-wasm-bindgen = { version = "0.6.5", optional = true }
smallvec = { version = "1.13" }
smol_str = { version = "0.3" }
thiserror = { version = "1.0" }
wasm-bindgen = { version = "0.2.83", optional = true }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
colored = { version = "2.1" }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[features]
default = ["repl"]
repl = ["clap", "dirs", "rustyline"]
serde = [
    "indexmap/serde",
    "serde_renamed",
    "smol_str/serde",
    "smallvec/serde",
]
wasm = [
    "console_error_panic_hook",
    "serde",
    "serde-wasm-bindgen",
    "wasm-bindgen",
]

[profile.release]
lto = "fat"
codegen-units = 1

[lints.clippy]
result_large_err = "allow"

[lib]
crate-type = ["cdylib", "rlib"]
bench = false
doctest = false

[[bench]]
name = "main"
harness = false
